--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <!-- Alertify -->
 	<link rel="stylesheet" href="node_modules\alertifyjs\build\css\alertify.min.css"/>
 	<!-- Default theme -->
-	<link rel="stylesheet" href="node_modules\alertifyjs\build\css\default.css"/>
+	<link rel="stylesheet" href="node_modules\alertifyjs\build\css\themes\default.css"/>
 	<!-- Semantic UI theme -->
-	<link rel="stylesheet" href="node_modules\alertifyjs\build\css\semantic.min.css"/>
+	<link rel="stylesheet" href="node_modules\alertifyjs\build\css\themes\semantic.min.css"/>
 	<!-- Bootstrap theme -->
-	<link rel="stylesheet" href="node_modules\alertifyjs\build\css\bootstrap.min.css"/>
+	<link rel="stylesheet" href="node_modules\alertifyjs\build\css\themes\bootstrap.min.css"/>
 	<style type="text/css" media="screen">
 		.ajs-message { color: #111;  background-color: #d9edf7;  border-color: #31708f; font-size: 18px; }
 		.alertify-notifier{padding: 20px 20px}
